--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="assets/css/News-Cards.css">
-    <link rel="stylesheet" href="assets/css/Projects-Clean.css">
-    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
-    <link rel="stylesheet" href="assets/css/Team-with-rotating-cards.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
@@ -40,38 +36,23 @@
             </div>
         </div>
     </section>
-    <!-- Start: Projects with rotating cards -->
     <section class="card-section-imagia" style="background-color: rgba(241,219,100,0.18);">
-        <!-- Start: H1 -->
         <h1>My Projects</h1>
-        <!-- End: H1 -->
         <div class="container" id="custom-container">
             <div class="row" id="custom-projects-row">
                 <div class="col-sm-6 col-md-4" id="projects-tile">
-                    <!-- Start: card container -->
                     <div id="custom-card-container-imagia" class="card-container-imagia">
-                        <!-- Start: card -->
                         <div class="card-imagia">
-                            <!-- Start: front -->
                             <div class="front-imagia" style="height: 450px;padding-top: 10px;">
-                                <!-- Start: cover image -->
                                 <div class="cover-imagia" style="height: 184px;"><img alt="" src="assets/img/fame_game_website%20(1).jpg" width="100%"></div>
-                                <!-- End: cover image -->
-                                <!-- Start: texte -->
                                 <div class="content-imagia">
                                     <h3 id="Project-Tiles" class="name-imagia">Fame Game</h3>
                                     <p class="subtitle-imagia">Flutter IOS and Android App</p>
                                     <p id="p-tile-body">Connect, Get Famous, And Earn! This app is a social experiment where 100 students compete on this social media platform to become the most famous. Available on Android and IOS. <br></p>
                                 </div>
-                                <!-- End: texte -->
-                                <!-- Start: footer -->
                                 <div class="footer-imagia"><span><i class="fa fa-plus"></i> More info</span></div>
-                                <!-- End: footer -->
                             </div>
-                            <!-- End: front -->
-                            <!-- Start: back -->
                             <div class="back-imagia" style="height: 450px;">
-                                <!-- Start: content -->
                                 <div class="content-imagia content-back-imagia">
                                     <div>
                                         <h3 class="text-center">Fame Game</h3>
@@ -79,46 +60,26 @@
                                             twist? The<br>participant that gets the most likes will be awarded $100. I made this app using Flutter and Firebase.<br></p>
                                     </div>
                                 </div>
-                                <!-- End: content -->
-                                <!-- Start: footer -->
                                 <div class="footer-imagia">
-                                    <!-- Start: icons -->
                                     <div class="social-imagia"><a href="https://github.com/n27jain/FameGame"><i class="fa fa-github" id="custom-icon"></i></a></div>
-                                    <!-- End: icons -->
                                 </div>
-                                <!-- End: footer -->
                             </div>
-                            <!-- End: back -->
                         </div>
-                        <!-- End: card -->
                     </div>
-                    <!-- End: card container -->
                 </div>
                 <div class="col-sm-6 col-md-4" id="projects-tile-1">
-                    <!-- Start: card container -->
                     <div id="custom-card-container-imagia" class="card-container-imagia">
-                        <!-- Start: card -->
                         <div class="card-imagia">
-                            <!-- Start: front -->
                             <div class="front-imagia" style="height: 450px;padding-top: 10px;">
-                                <!-- Start: cover image -->
                                 <div class="cover-imagia" style="height: 184px;"><img alt="" src="assets/img/microcontroller.png" width="100%"></div>
-                                <!-- End: cover image -->
-                                <!-- Start: texte -->
                                 <div class="content-imagia">
                                     <h3 id="Project-Tiles" class="name-imagia">X-Y Controller</h3>
                                     <p class="subtitle-imagia">Embedded Systems Project</p>
                                     <p id="x-y-p-tile-body">This project is made to simulate the behaviour of a crane. User inputs x-y coordinates on the controller and the system rotates 2 wheels in the respective direction and distance.&nbsp;<br></p>
                                 </div>
-                                <!-- End: texte -->
-                                <!-- Start: footer -->
                                 <div class="footer-imagia"><span><i class="fa fa-plus"></i> More info</span></div>
-                                <!-- End: footer -->
                             </div>
-                            <!-- End: front -->
-                            <!-- Start: back -->
                             <div class="back-imagia" style="height: 450px;">
-                                <!-- Start: content -->
                                 <div class="content-imagia content-back-imagia">
                                     <div>
                                         <h3 class="text-center">X-Y Controller</h3>
@@ -127,25 +88,16 @@
                                             convert the 8 signals of the keypad to be usable with just 3 signals.&nbsp;Sounds simple but it is very difficult to achieve.<br></p>
                                     </div>
                                 </div>
-                                <!-- End: content -->
-                                <!-- Start: footer -->
                                 <div class="footer-imagia">
-                                    <!-- Start: icons -->
                                     <div class="social-imagia"><a href="https://github.com/n27jain/X-Y-Controller"><i class="fa fa-github" id="custom-icon"></i></a></div>
-                                    <!-- End: icons -->
                                 </div>
-                                <!-- End: footer -->
                             </div>
-                            <!-- End: back -->
                         </div>
-                        <!-- End: card -->
                     </div>
-                    <!-- End: card container -->
                 </div>
             </div>
         </div>
     </section>
-    <!-- End: Projects with rotating cards -->
     <section id="custom-porfolio" class="portfolio-block website gradient">
         <div class="container">
             <div class="row align-items-center">
@@ -175,7 +127,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
