--- a/index.html
+++ b/index.html
@@ -10,29 +10,43 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Animated-Type-Heading.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/News-Cards.css">
+    <link rel="stylesheet" href="assets/css/Projects-Clean.css">
+    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
+    <link rel="stylesheet" href="assets/css/Team-with-rotating-cards.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#"><strong>Naman Jain</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#"><strong>NamanGineer</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="experience.html">Experience</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-me.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="experience.html">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-me.html">Contact</a></li>
                 </ul>
         </div>
         </div>
     </nav>
     <section class="portfolio-block block-intro">
-        <div class="container" id="custom-container-heading" style="padding-top: 20px;height: 680px;">
-            <div class="avatar" style="background-image: url(&quot;assets/img/profile_pic.jpeg&quot;);width: 300px;height: 300px;"></div>
+        <div class="container" id="custom-container-heading" style="padding-top: 20px;height: 749px;background: url(&quot;assets/img/empty%20laptop.png&quot;);background-size: cover;">
+            <div class="avatar" style="background-image: url(&quot;assets/img/profile_pic.jpeg&quot;);width: 300px;height: 300px;"></div>				<div class="caption v-middle text-center">
+					<h1 class="cd-headline clip">
+			            <span class="blc">I'm | </span>
+			            <span class="cd-words-wrapper">
+			              <b class="is-visible">Naman</b>
+			              <b>an Engineer</b>
+			              <b>NamanGineer</b>
+			            </span>
+	          		</h1>
+				</div>
             <div class="about-me">
-                <p>&nbsp;Hello! My name is <strong>Naman Jain</strong>, and I am a kick-ass Computer<br>Engineer who is currently seeking internship during Sept-Dec 2020. Along with studying for my degree in Computer Engineering at the University of Waterloo,
-                    I make videos, write screenplays, and do some freelancing work in designing and hosting websites.<br></p>
+                <p>&nbsp;Hello! My name is <strong>Naman Jain</strong>, and I am a kick-ass Computer<br>Engineer.&nbsp; Along with studying for my degree in Computer Engineering at the University of Waterloo, I make videos, write screenplays, and do some
+                    freelancing work in designing and hosting websites.<br></p>
             </div>
         </div>
     </section>
@@ -126,8 +140,9 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
+    <script src="assets/js/Animated-Type-Heading.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
